20020321
 - (bal) OpenBSD CVS Sync
   - itojun@cvs.openbsd.org 2002/03/08 06:10:16
     [sftp-client.c]
     printf type mismatch
   - itojun@cvs.openbsd.org 2002/03/11 03:18:49
     [sftp-client.c]
     correct type mismatches (u_int64_t != unsigned long long)
   - itojun@cvs.openbsd.org 2002/03/11 03:19:53
     [sftp-client.c]
     indent
   - markus@cvs.openbsd.org 2002/03/14 15:24:27
     [sshconnect1.c]
     don't trust size sent by (rogue) server; noted by s.esser@e-matters.de
   - markus@cvs.openbsd.org 2002/03/14 16:38:26
     [sshd.c]
     split out ssh1 session key decryption; ok provos@
   - markus@cvs.openbsd.org 2002/03/14 16:56:33
     [auth-rh-rsa.c auth-rsa.c auth.h]
     split auth_rsa() for better readability and privsep; ok provos@
   - itojun@cvs.openbsd.org 2002/03/15 11:00:38
     [auth.c]
     fix file type checking (use S_ISREG).  ok by markus
   - markus@cvs.openbsd.org 2002/03/16 11:24:53
     [compress.c]
     skip inflateEnd if inflate fails; ok provos@
   - markus@cvs.openbsd.org 2002/03/16 17:22:09
     [auth-rh-rsa.c auth.h]
     split auth_rhosts_rsa(), ok provos@
   - stevesk@cvs.openbsd.org 2002/03/16 17:41:25
     [auth-krb5.c]
     BSD license.  from Daniel Kouril via Dug Song.  ok markus@
   - provos@cvs.openbsd.org 2002/03/17 20:25:56
     [auth.c auth.h auth1.c auth2.c]
     getpwnamallow returns struct passwd * only if user valid; okay markus@
   - provos@cvs.openbsd.org 2002/03/18 01:12:14
     [auth.h auth1.c auth2.c sshd.c]
     have the authentication functions return the authentication context
     and then do_authenticated; okay millert@
   - dugsong@cvs.openbsd.org 2002/03/18 01:30:10
     [auth-krb4.c]
     set client to NULL after xfree(), from Rolf Braun 
     <rbraun+ssh@andrew.cmu.edu>
   - provos@cvs.openbsd.org 2002/03/18 03:41:08
     [auth.c session.c]
     move auth_approval into getpwnamallow with help from millert@
   - markus@cvs.openbsd.org 2002/03/18 17:13:15
     [cipher.c cipher.h]